<resources>
    <string name="app_name">Charades Reloaded</string>
    <string name="title_activity_main">Charades Reloaded</string>
    <string name="play_game">Play!</string>
    <string name="create_cards">Create Your Own Card Set</string>
    <string name="manage_cards">Your Card Sets</string>
    <string name="settings">Game Settings</string>
    <string name="share">Share With Friends</string>
    <string name="title_activity_manage_cards">ManageCardsActivity</string>
    <string name="addCardText">Enter card text</string>
    <string name="save">Save</string>
    <string name="title_activity_select_card_set_to_play">SelectCardSetToPlayActivity</string>
    <string name="title_activity_select_card_set_to_share">SelectCardSetToShare</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="title_activity_making_connection">MakingConnection</string>
    <string name="countdown_timer">Time remaining: %1$d seconds</string>
    <string name="get_ready">Get Ready!</string>
    <string name="go">Go!</string>
    <string name="dialog">Enter new set name:</string>
    <string name="dialog_title">Make a new set</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="correct_cards">Cards You Got Correct</string>
    <string name="incorrect_cards">Cards You Missed</string>
    <string name="share_title">Share Card Sets</string>
    <string name="share_description">Would you like to import or send a card set?</string>
    <string name="send">Send a Set</string>
    <string name="receive">Import a Set</string>
    <string name="delete_card_set">Are you sure you want to delete your card set %1$s?</string>
    <string name="delete">Delete</string>
    <string name="card_set_title">Card Set Title</string>
    <string name="cards_in_this_set">Cards in This Set</string>
    <string name="manage_card_sets_empty">You have no card sets yet! Create one using the plus button below.</string>
    <string name="manage_cards_empty">This card set doesn\'t have any cards yet. Add some with the plus button below!</string>
    <string name="email">Email Address</string>
    <string name="email_message">Enter E-mail address to send the set to.</string>
    <string name="email_title">Enter E-mail address</string>
    <string name="share_button">Share!</string>
    <string name="no_playable_sets">You don\'t have any sets with one or more cards in them yet. Would you like to add a new set?</string>
    <string name="no_playable_sets_title">No Sets to Play With</string>
    <string name="create_cards_dialog">Create a New Set</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="results">Your Results</string>
    <string name="no_cards_right">You didn\'t get any cards correct…</string>
    <string name="no_cards_wrong">You didn\'t miss any cards!</string>
    <string name="import_set_from_file">Import a Set from a File</string>
    <string name="import_card_set_description">Click on the button to open your file browser and select a card set file to import. Only .txt files are supported at this time.</string>
    <string name="ok">OK</string>
    <string name="set_already_exists">You already have a set called %1$s in your collection.</string>
    <string name="set_already_exists_title">Can\'t Add Set %1$s</string>
    <string name="set_imported">Set %1$s was imported properly. Would you like to view it?</string>
    <string name="set_imported_title">Set %1$s imported.</string>
    <string name="view_imported_set">View</string>
    <string name="do_not_view_imported_set">Don\'t View</string>
</resources>
