<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="charadesreloaded.handleymurphy.cs4720.virginia.edu.myapplication.MainActivity"

    tools:showIn="@layout/activity_main">



    <Button
        android:id="@+id/play_text"
        android:layout_width="fill_parent"
        android:layout_height="100sp"
        android:gravity="center"
        android:text="@string/play_game"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="goToPlay"/>

    <Button
        android:id="@+id/create_text"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/play_text"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/create_cards" />

    <Button
        android:id="@+id/manage_text"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/create_text"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="25sp"
        android:onClick="goToManage"
        android:text="@string/manage_cards" />


</RelativeLayout>
