<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="charadesreloaded.handleymurphy.cs4720.virginia.edu.myapplication.ManageCardsActivity"
    tools:showIn="@layout/activity_manage_cards">

    <LinearLayout
        android:id="@+id/manage_cards_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textAllCaps="false"
            android:text="@string/card_set_title" />

        <include layout="@layout/edit_item_card"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textAllCaps="false"
            android:text="@string/cards_in_this_set" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCards"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/manageCardsEmtpy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/manage_cards_empty"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
